@@ -1,0 +1,2 @@
+This directory contains tools which are meant to be used only
+in the toplevel.
