@@ -1,0 +1,2 @@
+ocaml top.ml $@
+
